# Brickcraft-Brick-Link

./: Brickcraft_Modding_Guide.md  Brickcraft_Modding_Guide_Unified.md  README.md  StudcraftEngine.md  clientcombined_source.txt
Brick-Link/: CMakeLists.txt
Brick-Link/Injector/: CMakeLists.txt
Brick-Link/Injector/src/: main.cpp
Brick-Link/Patcher/: CMakeLists.txt
Brick-Link/Patcher/src/: dllmain.cpp
Brick-Link/modmanager/: CMakeLists.txt
Brick-Link/modmanager/src/: main.cpp
assets/lua/: Main.lua  MyFirstMod.lua
assets/shaders/: chunk.frag  chunk.vert  floor.frag  floor.vert  preview.frag  preview.vert  screen.frag  screen.vert
code/: Brick-kwon-do-overview.txt  Game Design Document Studcraft Engine v1.txt  The Studcraft Engine v1.0 Documentation.txt  servercombined_source.txt
studcraft cpp headers/: client2combined_source.txt  server2combined_source.txt
studcraft cpp headers/client/: DataTypes.txt  ShaderLoader.txt  main.txt
studcraft cpp headers/server/: DataTypes.txt  PhysicsWorld.txt  PlayerPhysics.txt
studcraft exe files/: PhysicsWorld.cpp.txt  PhysicsWorld.h.txt  ShaderLoader.cpp.txt  brick.frag.txt  brick.vert.txt  client main.cpp.txt  player.cpp.txt  player.h.txt  server main.cpp.txt  server.cpp.txt  server.h.txt  simple.frag.txt  simple.vert.txt  world.cpp.txt  world.h.txt
studcraft exe files/newgithubfiles/bulletbroadphase/: AddSlopeBrick.cpp  CustomNarrowphaseSAT.h  README_BulletBroadphaseSAT.md  SAT.cpp
studcraft exe files/newgithubfiles/new shader+render/: README_StudcraftBrickSystem.md  ServerWorld.h  ShaderLoader.h  StudcraftBrickCatalog.cpp  StudcraftBrickCatalog.h  assets_shaders_brick.frag
studcraft exe files/newgithubfiles/physicscollision/: AddBricksToPhysics.cpp  MainUpdate.cpp  PhysicsWorld.cpp  PhysicsWorld.h  PlayerMove.cpp  PlayerPhysics.cpp  PlayerPhysics.h  README_PhysicsIntegration.md
studcraft exe files/newgithubfiles/world gen/: Chunk.h  PlayerSpawner.cpp  README_ChunkBiome.md  WorldGenerator.cpp  WorldGenerator.h
